# TextpadPlus

./: .gitignore  package.json  tsconfig.json  vite.config.ts
app/: index.html
app/src/: App.vue  main.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src/functions/: core.ts  loadmonaco.ts
app/src/themes/: TokyoNight.json  TokyoNight.monaco.json
app/src/types/: command.types.ts
app/src/ui/components/aside/: aside.filenode.vue  aside.vue
app/src/ui/components/command/: command.vue
app/src/ui/components/editor/: editor.vue  monaco.vue
app/src/ui/scripts/: useEditor.ts  useFileTree.ts
core/: CMakeLists.txt
core/src/: main.cxx
core/src/commands/: File.cxx  commands.hxx
core/src/commands/functions/: create_file.cxx  delete_item.cxx  find_all.cxx  get_stats.cxx  get_tokens.cxx  open_file.cxx  save_file.cxx  scan_dir.cxx
core/src/commands/utils/: utils.cxx  utils.hxx
scripts/: start.bat
